# falocon

./: .gitignore  Cargo.toml  README.md
src/: args.rs  lib.rs  main.rs  test.rs
src/generator/: docs.rs  enums.rs  fields.rs  formatter.rs  mod.rs  openapi.rs  params.rs  paths.rs  structs.rs  types.rs  writer.rs
template/: Cargo.toml
template/src/: client.rs  error.rs  lib.rs  request.rs  route.rs
tests/: openapi.json
