[package]
name = "falocon"
version = "0.1.0"
edition = "2024"

[dependencies]
openapiv3 = "2.2.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
futures = "0.3.31"
thiserror = "2.0.12"
heck = "0.5.0"
quote = "1.0.40"
proc-macro2 = "1.0.95"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["chrono"] }
